# Compiler-NJU

./: CMakeLists.txt  IC.ir  ParsingNode.c  ParsingNode.h  README.md  SIC.ir  clang-format.py  common.h  compiler  lex.yy.c  lex.yy.h  lexical.l  main.c  makefile  parser  readme.txt  syntax.output  syntax.tab.c  syntax.tab.h  syntax.y  text.h  新建文本文档.txt
SPIM/: spim.c  spim.h
intercode/: IC.h  ICTable.c  ICTable.h  InterCode.c  InterCode.h  optimazation.c  optimazation.h  optimization.c  optimization.h
lexical_syntax/: ParsingNode.c  ParsingNode.h  lex.yy.c  lex.yy.h  lexical.l  syntax.output  syntax.tab.c  syntax.tab.h  syntax.y  text.c  text.h
semantic/: InterCode.c  InterCode.h  check.c  check.h  list.c  list.h  semantic.c  semantic.h  symbol_table.h
test/: 1.cmm  2.cmm.ir  4.cmm.ir  test.cmm  test.cmm.ir
test/A/: a-1.cmm  a-5.cmm  a-7.cmm  a-8.cmm
test/C/: c-1.cmm
test/D/: d-2.cmm
test/E/: e-1.cmm  e-2.cmm
test/lab3/: 1.cmm.ir  4.cmm  A-1.cmm.ir  A-2.cmm.ir  A-3.cmm.ir  A-4.cmm.ir  A-5.cmm  A-5.cmm.ir  B-1.cmm.ir  B-2.cmm.ir  B-3.cmm  B-3.cmm.ir  C-1.cmm.ir  C-2.cmm.ir  D-1.cmm  D-1.cmm.ir  E-2.1.cmm.ir  E-2.2.cmm.ir  E-2.3.cmm  E-2.3.cmm.ir
test/lab4/: 1.cmm.ir  1.cmm.s  10.cmm.s  11.cmm.s  12.cmm.s  13.cmm.s  14.cmm.ir  14.cmm.s  2.cmm.ir  2.cmm.s  3.cmm.s  4.cmm.s  5.cmm  5.cmm.ir  5.cmm.s  6.cmm  6.cmm.ir  6.cmm.s  7.cmm  7.cmm.s  8.cmm.s  9.cmm.s
test/p1/: a-2.cmm  a-4.cmm  a-6.cmm  a-9.cmm  b-1.cmm  c-2.cmm  d-1.cmm  d-3.cmm  e-3.1.cmm  e-3.2.cmm  o5.cmm
test/p2/: 1.cmm  parsertree
test/p2/A/: 1.cmm  11.cmm  2.cmm  (+10 more)
test/samples/: o6.cmm
(+6 files in other folders)
